k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
  name: backend-deployment
  namespace: ammax

spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend

  template:
    metadata:
      labels:
        app: backend

    spec:
      securityContext:
        fsGroup: 1000

      containers:
        - name: backend-container
          image: rajeel/ammax-backend:2157403
          ports:
            - containerPort: 4000

          resources:
            requests:
              cpu: "300m"
              memory: "628Mi"
            limits:
              cpu: "600m"
              memory: "1Gi"

          volumeMounts:
            - name: upload-storage
              mountPath: /data/uploads

      volumes:
        - name: upload-storage
          persistentVolumeClaim:
            claimName: uploads-pvc
