k8s/frontend-deployment.yml
kind: Deployment
apiVersion: apps/v1

metadata:
 name: frontend-deployment
 namespace: ammax

spec:
 replicas: 1
 selector:
  matchLabels:
   app: frontend

 template: 
  metadata:
   labels:
    app: frontend

  spec: 
    containers: 
    - name: frontend-container
      image: rajeel/ammax-frontend:fe46912
      ports: 
      - containerPort: 80

      resources:
       requests:
        cpu: "100m"
        memory: "128Mi"

       limits:
        cpu: "200m"
        memory: "256Mi"
