k8s/mongodb-deployment.yml
kind: StatefulSet
apiVersion: apps/v1

metadata:
  name: mongodb-deployment
  namespace: ammax

spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb-svc

  template:
    metadata:
      labels:
        app: mongodb

    spec:
      containers:
      - name: mongodb-container
        image: mongo:7
        ports:
        - containerPort: 27017
        volumeMounts:
        - name: mongo-data
          mountPath: /data/db

      volumes:
      - name: mongo-data
        persistentVolumeClaim:
          claimName: mongo-pvc
