k8s/backend-svc.yml
kind: Service
apiVersion: v1

metadata:
  name: backend-svc
  namespace: ammax

spec:
  type: LoadBalancer
  selector:
    app: backend

  ports:
    - protocol: TCP
      port: 4000
      targetPort: 4000
