k8s/frontend-svc.yml
kind: Service
apiVersion: v1

metadata:
  name: frontend-svc
  namespace: ammax

spec:
  type: LoadBalancer
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
