k8s/mongodb-svc.yml
kind: Service
apiVersion: v1

metadata:
  name: mongodb-svc
  namespace: ammax

spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27018
      targetPort: 27017
